--- a/StockPortfolio/MainPage.xaml
+++ b/StockPortfolio/MainPage.xaml
@@ -1,7 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:StockPortfolio" x:Class="StockPortfolio.MainPage">
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
-    </StackLayout>
-</ContentPage>
+<?xml version="1.0" encoding="utf-8"?>
+<TabbedPage BarBackgroundColor = "Black"
+    xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    xmlns:local="clr-namespace:StockPortfolio" 
+    x:Class="StockPortfolio.MainPage"
+    
+    >
+    <local:StockList Title="Main" />
+    <local:SocialMediaPage Title="Live Social Media" />
+    
+</TabbedPage>
