--- a/StockPortfolio/MainPage.xaml
+++ b/StockPortfolio/MainPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabbedPage BarBackgroundColor = "Black"
+<TabbedPage BarBackgroundColor = "White"
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     xmlns:local="clr-namespace:StockPortfolio" 
