--- a/StockPortfolio/MainPage.xaml
+++ b/StockPortfolio/MainPage.xaml
@@ -8,6 +8,6 @@
     >
     <local:StockList Title="Main" Icon="iconhome.png" />
     <local:SocialMediaPage Title="Social Media" Icon="icontwitter.png"/>
-    <local:Login Title="LogIn" Icon="iconuser.png" />
     <local:news Title="News" Icon="iconsearch.png" />
+     <local:NotesPage Title="Portfolio" Icon="iconuser.png" />
 </TabbedPage>
